--- a/Sportivity/app/src/main/res/values/strings.xml
+++ b/Sportivity/app/src/main/res/values/strings.xml
@@ -9,4 +9,16 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string-array name="zonas_array">
+        <item>Brazos</item>
+        <item>Piernas</item>
+        <item>Abdomen</item>
+    </string-array>
+
+    <string-array name="tiempo_array">
+        <item>Min</item>
+        <item>Rep</item>
+    </string-array>
+
 </resources>
