--- a/Sportivity/app/src/main/res/values/strings.xml
+++ b/Sportivity/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="enter_your_city_name">Introduce tu ciudad</string>
 
     <string-array name="zonas_array">
         <item>Brazos</item>
